syntax = "proto3";

package auth;

option go_package = "api.auth.v1;api";

service Auth {
    rpc CreateUser (CreateRequest) returns (CreateResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}

message CreateRequest {
    string login = 1;
    string password = 2;
}

message CreateResponse {
    int64 user_id = 1;
}
message LoginRequest {
    string login = 1;
    string password = 2;
    int32 app_id = 3;
}
message LoginResponse {
    string token = 1;
}
